--- a/tags.html
+++ b/tags.html
@@ -4,8 +4,9 @@ title: "#Tags"
 permalink: /tags/index.html
 description: "Take a look at my beautiful tags."
 ---
-
-<h2 class="my-title">Tags</h2>
+<div class="my-title">
+<h2>Tags</h2>
+</div>
 <div class="tags">
 {% assign tags_list = site.tags %}
   {% if tags_list.first[0] == null %}
