--- a/tags.html
+++ b/tags.html
@@ -4,6 +4,7 @@ title: "#Tags"
 permalink: /tags/index.html
 description: "Take a look at my beautiful tags."
 ---
+{% include analytics.html %}
 <div class="my-title">
 <h2>Tags</h2>
 </div>
