--- a/series.html
+++ b/series.html
@@ -5,6 +5,7 @@ permalink: /series/index.html
 image: '/assets/img/series.png'
 description: "Take a look at my posts..."
 ---
+{% include analytics.html %}
 <div class="my-title">
 <h2>Posts</h2>
 </div>
